Started on piece dragging / selecting

--- a/chess/src/components/Square.css
+++ b/chess/src/components/Square.css
@@ -16,6 +16,10 @@
   background-color: burlywood;
 }
 
+.squareVoid {
+  opacity: 0;
+}
+
 .squareHighlight {
   opacity: 0.5;
   user-select: none;
