--- a/chess/src/App.css
+++ b/chess/src/App.css
@@ -1,13 +1,24 @@
+.hud {
+  position: absolute;
+  opacity: 0.5;
+  top: 10px;
+  left: 10px;
+  width: 250px;
+  height: auto;
+  background-color: pink;
+}
+
 .outer {
-  background-color: grey;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
 }
 
 .inner {
   margin-left: auto;
   margin-right: auto;
-  display: inline-block;
   border-style: solid;
   text-align: center;
-  height: 70%;
 }
